Updated getPathToDirectory()